@@ -49,4 +49,35 @@ Strong References: Prevent GC unless explicitly set to null.
 Soft References: Cleared before OutOfMemoryError.
 Weak References: Cleared during the next GC cycle.
 Phantom References: Used for post-mortem cleanup; requires explicit reference queue.
- 
+
+### Garbage Collectors across Java 8, 11, 17, and 21 with their default and available options:
+
+default Garbage Collector (GC) used across major Java versions:
+•	Java 8 → Parallel GC (a throughput-oriented collector).
+•	Java 11 → G1 GC (became the default to reduce pause times).
+•	Java 17 → G1 GC (still the default, with improvements).
+•	Java 21 → G1 GC (default, but ZGC and Shenandoah are fully production-ready and highly tuned for low latency).
+👉 You can still choose others (-XX:+UseParallelGC, -XX:+UseZGC, -XX:+UseShenandoahGC, etc.) depending on needs.
+
+- java Version	Default GC	Other Available GCs	:-
+- Java 8 **Parallel GC** Serial, maximize work done by minimizing GC overhead	Higher pause times, not great for large heaps
+- Java 11 **G1 GC** Parallel, Serial, Epsilon (no-op), ZGC (experimental)	Balanced – reduces pause times vs Parallel	
+  More predictable pauses but slightly lower throughput than Parallel
+- Java 17 (LTS)	**G1 GC** Parallel, Serial, ZGC (stable), Shenandoah (optional), Epsilon Low pause times with large heaps
+   Good balance, ZGC/Shenandoah better for very low latency apps
+- Java 21 (LTS)	**G1 GC**	Parallel, Serial, ZGC (mature), Shenandoah (mature), Epsilon Balanced by default; low-latency 
+  collectors (ZGC/Shenandoah) available	G1 is fine for most apps, but ZGC/Shenandoah best for real-time, large heap, low latency workloads
+
+👉 Rule of thumb:
+•	Use Parallel GC → If throughput matters most (batch/ETL jobs).
+•	Use G1 (default) → If balanced throughput & latency is fine (most enterprise apps).
+•	Use ZGC/Shenandoah → If low latency is critical (financial, trading, gaming, real-time apps).
+
+### Latency vs throughput
+- In Computing (Networks, Systems, APIs, Databases)
+- **Latency** = Time taken to process a single request (or packet).
+   - Measured in milliseconds (ms) or seconds.
+   - Example: API call response time = 120ms.
+- Throughput = Number of requests processed per unit time.
+   - Measured in requests per second (RPS), transactions per second (TPS), or Mbps in networking.
+   - Example: System can handle 10,000 requests/sec.
